[package]
name = "hc14-at-rs"
edition = "2021"
version = "0.2.3"
authors = ["Auroot Yang <czjishu@gmail.com>"]
repository = "https://github.com/auroots/hc14-at-rs"
description = "An embedded-hal driver for the HC-14 serial transceiver module."
#license-file = "LICENSE"

[dependencies]
at-commands = "0.5.4"
embedded-hal = "0.2.7"
nb = "1.1.0"
num-traits = { version = "0.2.17", default-features = false }
num-derive = "0.4.1"
alloc-cortex-m = "0.4.4"
heapless = "0.7"
